model/unpackaged/objects/SIP_Transformation__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Task_Step__r.Task_Name__c</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Step_Type__c</fullName>
        <formula>TEXT(Task_Step__r.Step_Type__c)</formula>
        <label>Task Step Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task Step</label>
        <referenceTo>SIP_Task_Step__c</referenceTo>
        <relationshipLabel>SIP Transformations</relationshipLabel>
        <relationshipName>SIP_Transformations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transformation__c</fullName>
        <label>Transformation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SIP Transformation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_ID__c</columns>
        <columns>Task_Step__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Task_Step_Type__c</columns>
        <columns>Order__c</columns>
        <columns>Target_Field__c</columns>
        <columns>Transformation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAP{00000000}</displayFormat>
        <label>SIP Transformation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Transformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>